# PBI_MCP

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup_azure_auth.sh
src/: auth.py  config.py  powerbi.py  server.py
tests/: conftest.py  test_server.py
